--- a/report/knn-clas.TeX
+++ b/report/knn-clas.TeX
@@ -1,4 +1,5 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper]{article}
+\usepackage[a4paper, margin=1in]{geometry}
 
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
