--- a/scripts/comparison_results/real_sets_results.tex
+++ b/scripts/comparison_results/real_sets_results.tex
@@ -1,24 +1,18 @@
 \begin{table}[H]
-\begin{tabular}{cccllllllllllllllll}
-\multirow{2}{*}{dataset} & \multirow{2}{*}{samples} & \multirow{2}{*}{features} & 
-\multicolumn{4}{c}{accuracy} & \multicolumn{4}{c}{precision} & 
-\multicolumn{4}{c}{recall} & \multicolumn{4}{c}{f1} \\
- & & & 
-\multicolumn{1}{c}{nn-clas} & \multicolumn{1}{c}{1nn-clas} & 
-\multicolumn{1}{c}{3nn-clas} & \multicolumn{1}{c}{5nn-clas} & 
-\multicolumn{1}{c}{nn-clas} & \multicolumn{1}{c}{1nn-clas} & 
-\multicolumn{1}{c}{3nn-clas} & \multicolumn{1}{c}{5nn-clas} & 
-\multicolumn{1}{c}{nn-clas} & \multicolumn{1}{c}{1nn-clas} & 
-\multicolumn{1}{c}{3nn-clas} & \multicolumn{1}{c}{5nn-clas} & 
-\multicolumn{1}{c}{nn-clas} & \multicolumn{1}{c}{1nn-clas} & 
-\multicolumn{1}{c}{3nn-clas} & \multicolumn{1}{c}{5nn-clas} \\
-Ionosphere & 351 & 34 & 0.87 $\pm$ 0.05 & 0.85 $\pm$ 0.05 & 0.87 $\pm$ 0.04 & 0.87 $\pm$ 0.05 & 0.88 $\pm$ 0.05 & 0.87 $\pm$ 0.05 & 0.89 $\pm$ 0.04 & 0.88 $\pm$ 0.05 & 0.87 $\pm$ 0.05 & 0.85 $\pm$ 0.05 & 0.87 $\pm$ 0.04 & 0.87 $\pm$ 0.05 & 0.87 $\pm$ 0.05 & 0.85 $\pm$ 0.06 & 0.87 $\pm$ 0.05 & 0.86 $\pm$ 0.05 \\
-Binary Digits & 360 & 64 & 1.00 $\pm$ 0.00 & 0.52 $\pm$ 0.02 & 0.52 $\pm$ 0.02 & 0.52 $\pm$ 0.02 & 1.00 $\pm$ 0.00 & 0.56 $\pm$ 0.25 & 0.56 $\pm$ 0.25 & 0.56 $\pm$ 0.25 & 1.00 $\pm$ 0.00 & 0.52 $\pm$ 0.02 & 0.52 $\pm$ 0.02 & 0.52 $\pm$ 0.02 & 1.00 $\pm$ 0.00 & 0.38 $\pm$ 0.04 & 0.38 $\pm$ 0.04 & 0.38 $\pm$ 0.04 \\
-Haberman & 306 & 3 & 0.71 $\pm$ 0.07 & 0.68 $\pm$ 0.06 & 0.69 $\pm$ 0.07 & 0.69 $\pm$ 0.06 & 0.71 $\pm$ 0.07 & 0.67 $\pm$ 0.05 & 0.67 $\pm$ 0.07 & 0.66 $\pm$ 0.07 & 0.71 $\pm$ 0.07 & 0.68 $\pm$ 0.06 & 0.69 $\pm$ 0.07 & 0.69 $\pm$ 0.06 & 0.71 $\pm$ 0.07 & 0.67 $\pm$ 0.05 & 0.67 $\pm$ 0.07 & 0.67 $\pm$ 0.06 \\
-Pima Diabetes & 768 & 8 & 0.73 $\pm$ 0.05 & 0.52 $\pm$ 0.05 & 0.52 $\pm$ 0.05 & 0.52 $\pm$ 0.05 & 0.75 $\pm$ 0.05 & 0.65 $\pm$ 0.05 & 0.65 $\pm$ 0.05 & 0.65 $\pm$ 0.05 & 0.73 $\pm$ 0.05 & 0.52 $\pm$ 0.05 & 0.52 $\pm$ 0.05 & 0.52 $\pm$ 0.05 & 0.73 $\pm$ 0.05 & 0.50 $\pm$ 0.04 & 0.50 $\pm$ 0.04 & 0.50 $\pm$ 0.04 \\
-Banknote & 1372 & 4 & 1.00 $\pm$ 0.00 & 0.99 $\pm$ 0.01 & 0.99 $\pm$ 0.01 & 0.99 $\pm$ 0.01 & 1.00 $\pm$ 0.00 & 0.99 $\pm$ 0.01 & 0.99 $\pm$ 0.01 & 0.99 $\pm$ 0.01 & 1.00 $\pm$ 0.00 & 0.99 $\pm$ 0.01 & 0.99 $\pm$ 0.01 & 0.99 $\pm$ 0.01 & 1.00 $\pm$ 0.00 & 0.99 $\pm$ 0.01 & 0.99 $\pm$ 0.01 & 0.99 $\pm$ 0.01 \\
-Sonar & 208 & 60 & 0.77 $\pm$ 0.13 & 0.85 $\pm$ 0.07 & 0.83 $\pm$ 0.07 & 0.81 $\pm$ 0.08 & 0.79 $\pm$ 0.12 & 0.86 $\pm$ 0.07 & 0.85 $\pm$ 0.07 & 0.82 $\pm$ 0.08 & 0.77 $\pm$ 0.13 & 0.85 $\pm$ 0.07 & 0.83 $\pm$ 0.07 & 0.81 $\pm$ 0.08 & 0.76 $\pm$ 0.14 & 0.85 $\pm$ 0.07 & 0.83 $\pm$ 0.07 & 0.81 $\pm$ 0.08 \\
-Breast Cancer & 569 & 30 & 0.93 $\pm$ 0.03 & 0.39 $\pm$ 0.02 & 0.39 $\pm$ 0.02 & 0.39 $\pm$ 0.02 & 0.93 $\pm$ 0.03 & 0.58 $\pm$ 0.29 & 0.58 $\pm$ 0.29 & 0.58 $\pm$ 0.29 & 0.93 $\pm$ 0.03 & 0.39 $\pm$ 0.02 & 0.39 $\pm$ 0.02 & 0.39 $\pm$ 0.02 & 0.93 $\pm$ 0.03 & 0.25 $\pm$ 0.04 & 0.25 $\pm$ 0.04 & 0.25 $\pm$ 0.04 \\
-SPECT Heart & 349 & 44 & 0.70 $\pm$ 0.08 & 0.95 $\pm$ 0.03 & 0.95 $\pm$ 0.03 & 0.95 $\pm$ 0.03 & 0.84 $\pm$ 0.05 & 0.96 $\pm$ 0.03 & 0.96 $\pm$ 0.03 & 0.96 $\pm$ 0.03 & 0.70 $\pm$ 0.08 & 0.95 $\pm$ 0.03 & 0.95 $\pm$ 0.03 & 0.95 $\pm$ 0.03 & 0.71 $\pm$ 0.08 & 0.95 $\pm$ 0.04 & 0.95 $\pm$ 0.04 & 0.95 $\pm$ 0.04 \\
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{\textbf{Dataset}} & \multirow{2}{*}{\textbf{Samples}} & \multirow{2}{*}{\textbf{Features}} & \multicolumn{4}{c|}{\textbf{Accuracy}} \\ \cline{4-7}
+ & & & \textbf{nn-clas} & \textbf{1nn-clas} & \textbf{3nn-clas} & \textbf{5nn-clas} \\ \hline
+Ionosphere & 351 & 34 & 0.87 & 0.85 & 0.87 & 0.87 \\ \hline
+Binary Digits & 360 & 64 & 1.00 & 0.52 & 0.52 & 0.52 \\ \hline
+Haberman & 306 & 3 & 0.71 & 0.68 & 0.69 & 0.69 \\ \hline
+Pima Diabetes & 768 & 8 & 0.73 & 0.52 & 0.52 & 0.52 \\ \hline
+Banknote & 1372 & 4 & 1.00 & 0.99 & 0.99 & 0.99 \\ \hline
+Sonar & 208 & 60 & 0.77 & 0.85 & 0.83 & 0.81 \\ \hline
+Breast Cancer & 569 & 30 & 0.93 & 0.39 & 0.39 & 0.39 \\ \hline
+SPECT Heart & 349 & 44 & 0.70 & 0.95 & 0.95 & 0.95 \\ \hline
 \end{tabular}
+\caption{Comparison of Models on Different Datasets}
+\label{tab:comparison_results}
 \end{table}
