Refactor KNN classification scripts: update LaTeX title, enhance comparison metrics to include training and prediction times, and add script for timing measurements.

--- a/report/knn-clas.TeX
+++ b/report/knn-clas.TeX
@@ -7,7 +7,7 @@
 \usepackage{multirow}
 \usepackage{float}
 
-\title{K-Nearest Neighbors Classification Study}
+\title{KNN-CLAS}
 \author{Eduardo}
 \date{\today}
 
