--- a/scripts/comparison_results/real_sets_results.tex
+++ b/scripts/comparison_results/real_sets_results.tex
@@ -1,18 +1,37 @@
 \begin{table}[H]
 \centering
-\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
-\multirow{2}{*}{\textbf{Dataset}} & \multirow{2}{*}{\textbf{Samples}} & \multirow{2}{*}{\textbf{Features}} & \multicolumn{4}{c|}{\textbf{Accuracy}} & \multicolumn{2}{c|}{\textbf{Training Time (ms)}} & \multicolumn{4}{c|}{\textbf{Prediction Time (ms)}} \\ \cline{4-7} \cline{8-9} \cline{10-13}
- & & & \textbf{nn} & \textbf{1nn} & \textbf{3nn} & \textbf{5nn} & \textbf{nn} & \textbf{knn} & \textbf{nn} & \textbf{1nn} & \textbf{3nn} & \textbf{5nn} \\ \hline
-Ionosphere & 351 & 34 & 0.87 & 0.85 & 0.87 & 0.87 & 70.90 & 27.10 & 2.90 & 3.00 & 3.00 & 3.40 \\ \hline
-Binary Digits & 360 & 64 & 1.00 & 0.52 & 0.52 & 0.52 & 267.70 & 103.40 & 3.30 & 4.20 & 3.90 & 4.10 \\ \hline
-Haberman & 306 & 3 & 0.71 & 0.68 & 0.69 & 0.69 & 19.40 & 10.10 & 2.50 & 2.90 & 3.00 & 2.90 \\ \hline
-Pima Diabetes & 768 & 8 & 0.73 & 0.52 & 0.52 & 0.52 & 77.30 & 32.40 & 2.70 & 5.10 & 4.90 & 4.90 \\ \hline
-Banknote & 1372 & 4 & 1.00 & 0.99 & 0.99 & 0.99 & 296.50 & 50.90 & 3.00 & 3.70 & 3.40 & 4.00 \\ \hline
-Sonar & 208 & 60 & 0.77 & 0.85 & 0.83 & 0.81 & 67.00 & 29.10 & 3.00 & 3.00 & 2.90 & 2.90 \\ \hline
-Breast Cancer & 569 & 30 & 0.93 & 0.39 & 0.39 & 0.39 & 75.50 & 15.80 & 2.90 & 3.50 & 3.10 & 3.50 \\ \hline
-SPECT Heart & 349 & 44 & 0.70 & 0.95 & 0.95 & 0.95 & 197.30 & 75.70 & 3.00 & 3.60 & 3.40 & 3.20 \\ \hline
+\multirow{2}{*}{\textbf{Dataset}} & \multirow{2}{*}{\textbf{Samples}} & \multirow{2}{*}{\textbf{Features}} & \multicolumn{4}{c|}{\textbf{Accuracy}} \\ \cline{4-7}
+ & & & \textbf{nn-clas} & \textbf{1nn-clas} & \textbf{3nn-clas} & \textbf{5nn-clas} \\ \hline
+Ionosphere & 351 & 34 & 0.87 & 0.85 & 0.87 & 0.87 \\ \hline
+Binary Digits & 360 & 64 & 1.00 & 0.52 & 0.52 & 0.52 \\ \hline
+Haberman & 306 & 3 & 0.71 & 0.68 & 0.69 & 0.69 \\ \hline
+Pima Diabetes & 768 & 8 & 0.73 & 0.52 & 0.52 & 0.52 \\ \hline
+Banknote & 1372 & 4 & 1.00 & 0.99 & 0.99 & 0.99 \\ \hline
+Sonar & 208 & 60 & 0.77 & 0.85 & 0.83 & 0.81 \\ \hline
+Breast Cancer & 569 & 30 & 0.93 & 0.39 & 0.39 & 0.39 \\ \hline
+SPECT Heart & 349 & 44 & 0.70 & 0.95 & 0.95 & 0.95 \\ \hline
 \end{tabular}
-\caption{Comparison of Models with Training and Prediction Times}
-\label{tab:comparison_results}
+\caption{Model Accuracy Comparison}
+\label{tab:accuracy}
+\end{table}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{\textbf{Dataset}} & \multirow{2}{*}{\textbf{Samples}} & \multirow{2}{*}{\textbf{Features}} & \multicolumn{2}{c|}{\textbf{Training (ms)}} & \multicolumn{4}{c|}{\textbf{Prediction (ms)}} \\ \cline{4-9}
+ & & & \textbf{nn-clas} & \textbf{knn-clas} & \textbf{nn-clas} & \textbf{1nn} & \textbf{3nn} & \textbf{5nn} \\ \hline
+Ionosphere & 351 & 34 & 70.90 & 27.10 & 2.90 & 3.00 & 3.00 & 3.40 \\ \hline
+Binary Digits & 360 & 64 & 267.70 & 103.40 & 3.30 & 4.20 & 3.90 & 4.10 \\ \hline
+Haberman & 306 & 3 & 19.40 & 10.10 & 2.50 & 2.90 & 3.00 & 2.90 \\ \hline
+Pima Diabetes & 768 & 8 & 77.30 & 32.40 & 2.70 & 5.10 & 4.90 & 4.90 \\ \hline
+Banknote & 1372 & 4 & 296.50 & 50.90 & 3.00 & 3.70 & 3.40 & 4.00 \\ \hline
+Sonar & 208 & 60 & 67.00 & 29.10 & 3.00 & 3.00 & 2.90 & 2.90 \\ \hline
+Breast Cancer & 569 & 30 & 75.50 & 15.80 & 2.90 & 3.50 & 3.10 & 3.50 \\ \hline
+SPECT Heart & 349 & 44 & 197.30 & 75.70 & 3.00 & 3.60 & 3.40 & 3.20 \\ \hline
+\end{tabular}
+\caption{Training and Prediction Times}
+\label{tab:timing}
 \end{table}
