Add support samples count to KNN classification results and update LaTeX tables

--- a/report/KNN-CLAS.tex
+++ b/report/KNN-CLAS.tex
@@ -41,6 +41,8 @@ eduardohbc@ufmg.br}
 
 \input{../scripts/comparison_results/real_sets_results_timing.tex}
 
+\input{../scripts/comparison_results/real_sets_results_support.tex}
+
 \section{Discussion}
 
 \section*{Acknowledgment}
