Add dataset metadata table and update LaTeX report structure for clarity

--- a/report/KNN-CLAS.tex
+++ b/report/KNN-CLAS.tex
@@ -37,6 +37,8 @@ eduardohbc@ufmg.br}
 
 \section{Results}
 
+\input{../scripts/comparison_results/real_sets_results_metadata.tex}
+
 \input{../scripts/comparison_results/real_sets_results_accuracy.tex}
 
 \input{../scripts/comparison_results/real_sets_results_timing.tex}
@@ -47,14 +49,14 @@ eduardohbc@ufmg.br}
 
 \section*{Acknowledgment}
 
-\section*{References}
-
 \begin{thebibliography}{00}
-\bibitem{knn} T. Cover and P. Hart, "Nearest neighbor pattern classification," in IEEE Transactions on Information Theory, vol. 13, no. 1, pp. 21-27, Jan. 1967.
-
-\bibitem{dataset} D. Dua and C. Graff, "UCI Machine Learning Repository," [Online]. Available: http://archive.ics.uci.edu/ml, 2017.
-
-\bibitem{optimization} J. Kennedy and R. Eberhart, "Particle swarm optimization," in Proceedings of ICNN'95 - International Conference on Neural Networks, Perth, WA, Australia, 1995, pp. 1942-1948.
+    \bibitem{torres2016} L. C. B. Torres, "Classificador por arestas de suporte (CLAS): métodos de aprendizado baseados em Grafos de Gabriel," Manuscript, 2016.
+    \bibitem{souza2019} A. C. Souza, C. Leite Castro, J. A. Garcia, L. C. B. Torres, L. J. Acevedo Jaimes and B. R. A. Jaimes, "Improving the Efficiency of Gabriel Graph-based Classifiers for Hardware-optimized Implementations," 2019 XXII Symposium on Image, Signal Processing and Artificial Vision (STSIVA), Bucaramanga, Colombia, 2019.
+    \bibitem{arias2021} J. Arias-Garcia et al., "Enhancing Performance of Gabriel Graph-Based Classifiers by a Hardware Co-Processor for Embedded System Applications," in IEEE Transactions on Industrial Informatics, vol. 17, no. 2, Feb. 2021.
+    \bibitem{arias2024} J. Arias-Garcia et al., "Improved Design for Hardware Implementation of Graph-Based Large Margin Classifiers for Embedded Edge Computing," in IEEE Transactions on Neural Networks and Learning Systems, vol. 35, no. 1, Jan. 2024.
+    \bibitem{torres2015} L. C. B. Torres, C. L. Castro and A. P. Braga, "A parameterless mixture model for large margin classification," 2015 International Joint Conference on Neural Networks (IJCNN), Killarney, Ireland, 2015.
+    \bibitem{torres2021} L. C. B. Torres, C. L. Castro, F. Coelho and A. P. Braga, "Large Margin Gaussian Mixture Classifier With a Gabriel Graph Geometric Representation of Data Set Structure," in IEEE Transactions on Neural Networks and Learning Systems, vol. 32, no. 3, March 2021.
+    \bibitem{torres2015b} L. C. B. Torres, C. L. Castro, F. Coelho, F. Sill Torres and A. P. Braga, "Distance-based large margin classifier suitable for integrated circuit implementation," Manuscript, 2015.
 \end{thebibliography}
 
 \end{document}
