--- a/scripts/comparison_results/real_sets_results_support.tex
+++ b/scripts/comparison_results/real_sets_results_support.tex
@@ -1,18 +1,18 @@
-\begin{table}[H]
-\centering
-\begin{tabular}{|c|c|c|c|c|}
-\hline
-\multirow{2}{*}{\textbf{Dataset}} & \multirow{2}{*}{\textbf{Samples}} & \multirow{2}{*}{\textbf{Features}} & \multicolumn{2}{c|}{\textbf{Support Samples}} \\ \cline{4-5}
- & & & \textbf{nn-clas} & \textbf{knn-clas} \\ \hline
-Ionosphere & 351 & 34 & 101 & 252 \\ \hline
-Binary Digits & 360 & 64 & 131 & 267 \\ \hline
-Haberman & 306 & 3 & 54 & 223 \\ \hline
-Pima Diabetes & 768 & 8 & 113 & 594 \\ \hline
-Banknote & 1372 & 4 & 159 & 179 \\ \hline
-Sonar & 208 & 60 & 143 & 186 \\ \hline
-Breast Cancer & 569 & 30 & 8 & 122 \\ \hline
-SPECT Heart & 349 & 44 & 98 & 275 \\ \hline
-\end{tabular}
+\begin{table}[htbp]
 \caption{Support Samples Count}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+\textbf{Dataset} & \textbf{nn} & \textbf{knn} \\ \hline
+Ionosphere & 101 & 252 \\ \hline
+Binary Digits & 131 & 267 \\ \hline
+Haberman & 54 & 223 \\ \hline
+Pima Diabetes & 113 & 594 \\ \hline
+Banknote & 159 & 179 \\ \hline
+Sonar & 143 & 186 \\ \hline
+Breast Cancer & 8 & 122 \\ \hline
+SPECT Heart & 98 & 275 \\ \hline
+\end{tabular}
 \label{tab:support}
+\end{center}
 \end{table}
