--- a/scripts/comparison_results/real_sets_results_timing.tex
+++ b/scripts/comparison_results/real_sets_results_timing.tex
@@ -1,18 +1,19 @@
-\begin{table}[H]
-\centering
-\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
-\hline
-\multirow{2}{*}{\textbf{Dataset}} & \multirow{2}{*}{\textbf{Samples}} & \multirow{2}{*}{\textbf{Features}} & \multicolumn{2}{c|}{\textbf{Training (ms)}} & \multicolumn{4}{c|}{\textbf{Prediction (ms)}} \\ \cline{4-9}
- & & & \textbf{nn-clas} & \textbf{knn-clas} & \textbf{nn-clas} & \textbf{1nn} & \textbf{3nn} & \textbf{5nn} \\ \hline
-Ionosphere & 351 & 34 & 80.10 & 29.00 & 2.70 & 3.50 & 3.70 & 3.60 \\ \hline
-Binary Digits & 360 & 64 & 246.70 & 95.10 & 3.00 & 3.10 & 3.20 & 3.20 \\ \hline
-Haberman & 306 & 3 & 16.90 & 9.10 & 2.00 & 2.60 & 2.50 & 2.70 \\ \hline
-Pima Diabetes & 768 & 8 & 76.90 & 30.70 & 2.10 & 5.00 & 4.70 & 4.90 \\ \hline
-Banknote & 1372 & 4 & 299.70 & 58.20 & 3.40 & 3.80 & 3.90 & 3.70 \\ \hline
-Sonar & 208 & 60 & 179.40 & 74.30 & 7.40 & 8.10 & 7.00 & 8.00 \\ \hline
-Breast Cancer & 569 & 30 & 96.10 & 19.60 & 3.10 & 4.00 & 3.80 & 3.50 \\ \hline
-SPECT Heart & 349 & 44 & 195.40 & 74.40 & 2.20 & 3.00 & 3.00 & 3.00 \\ \hline
-\end{tabular}
+\begin{table}[htbp]
 \caption{Training and Prediction Times}
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{\textbf{Dataset}} & \multicolumn{2}{c|}{\textbf{Training (ms)}} & \multicolumn{4}{c|}{\textbf{Prediction (ms)}} \\ \cline{2-7}
+ & \textbf{nn} & \textbf{knn} & \textbf{nn} & \textbf{1nn} & \textbf{3nn} & \textbf{5nn} \\ \hline
+Ionosphere & 80.10 & 29.00 & 2.70 & 3.50 & 3.70 & 3.60 \\ \hline
+Binary Digits & 246.70 & 95.10 & 3.00 & 3.10 & 3.20 & 3.20 \\ \hline
+Haberman & 16.90 & 9.10 & 2.00 & 2.60 & 2.50 & 2.70 \\ \hline
+Pima Diabetes & 76.90 & 30.70 & 2.10 & 5.00 & 4.70 & 4.90 \\ \hline
+Banknote & 299.70 & 58.20 & 3.40 & 3.80 & 3.90 & 3.70 \\ \hline
+Sonar & 179.40 & 74.30 & 7.40 & 8.10 & 7.00 & 8.00 \\ \hline
+Breast Cancer & 96.10 & 19.60 & 3.10 & 4.00 & 3.80 & 3.50 \\ \hline
+SPECT Heart & 195.40 & 74.40 & 2.20 & 3.00 & 3.00 & 3.00 \\ \hline
+\end{tabular}
 \label{tab:timing}
+\end{center}
 \end{table}
