Update LaTeX tables and CSV results: correct support samples and timing data

--- a/scripts/comparison_results/real_sets_results_support.tex
+++ b/scripts/comparison_results/real_sets_results_support.tex
@@ -3,7 +3,8 @@
 \begin{center}
 \begin{tabular}{|c|c|c|}
 \hline
-\textbf{Dataset} & \textbf{nn} & \textbf{knn} \\ \hline
+\multirow{2}{*}{\textbf{Dataset}} & \multicolumn{2}{c|}{\textbf{Support Samples}} \\ \cline{2-3}
+ & \textbf{nn} & \textbf{knn} \\ \hline
 Ionosphere & 101 & 252 \\ \hline
 Binary Digits & 131 & 267 \\ \hline
 Haberman & 54 & 223 \\ \hline
